[project]
name = "googlemaps-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "python-dotenv>=1.1.0",
    "nodriver>=0.48.1",
    "psycopg[binary,pool]>=3.2.6",
    "pyyaml>=6.0.3",
    "redis>=5.0.0",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "psutil>=5.9.0",
    "websockets>=15.0",
]
