[project]
name = "googlemaps-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.1.0",
    "aiohttp>=3.13.0",
    "psycopg[binary,pool]>=3.2.6",
    "pyyaml>=6.0.3",
    "redis>=5.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "psutil>=5.9.0",
]
